--- a/2_projeto_vue/public/index.html
+++ b/2_projeto_vue/public/index.html
@@ -12,6 +12,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
+   <strong>Assistindo: Curso de Vue 11: #11</strong>
     <!-- built files will be auto injected -->
   </body>
 </html>
